# odin-react-workshop

./: .gitignore  README.md
control/: .gitignore  README.md  pyproject.toml
control/src/workshop/: adapter.py  controller.py
control/web/config/: odin.cfg
